--- a/app/templates/app/car_detail.html
+++ b/app/templates/app/car_detail.html
@@ -5,6 +5,23 @@
     <title>Title</title>
 </head>
 <body>
+    <center>
+         <h1>Изменить объект</h1>
+
+         <form method="post" action="." enctype="multipart/form-data">
+             {% csrf_token %}
+             {{ form.as_p }}
+
+             <button type="submit">Изменить</button>
+             <br>
+             <a href="{% url 'index' %}">Назад</a>
+             <br>
+         <a href="{% url 'delete' car.id  %}">Удалить</a>
+         <p>{{ car.title }}</p>
+         <img src="{{ car.image.irl }}">
+         <br>
+         </form>
+     </center>
 
 </body>
 </html>
