--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -16,7 +16,6 @@
     </style>
 </head>
 <body>
-
    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
        <div class="container">
            <a class="navbar-brand" href="#">Car Gallery</a>
@@ -28,6 +27,11 @@
                    <input class="form-control me-2" type="search" placeholder="Поиск..." aria-label="Search" name="search">
                    <button class="btn btn-outline-light" type="submit">Найти</button>
                </form>
+               <ul class="navbar-nav ms-3">
+                   <li class="nav-item">
+                       <a class="nav-link" href="{% url 'car_create' %}"> Создать новый автомобиль</a>
+                   </li>
+               </ul>
            </div>
        </div>
    </nav>
@@ -49,7 +53,7 @@
            {% endfor %}
        </div>
    </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
