--- a/app/templates/app/car_detail.html
+++ b/app/templates/app/car_detail.html
@@ -18,7 +18,7 @@
              <br>
          <a href="{% url 'delete' car.id  %}">Удалить</a>
          <p>{{ car.title }}</p>
-         <img src="{{ car.image.irl }}">
+         <img src="{{ car.image.url }}">
          <br>
          </form>
      </center>
